[workspace]
members = ["app", "tools"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
homepage = "https://viz.rs"

[workspace.dependencies]
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 2
