[package]
name = "viz_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
console_log = "1"
log = "0.4"
leptos = { git = "https://github.com/leptos-rs/leptos.git", branch = "main" }
leptos_router = { git = "https://github.com/leptos-rs/leptos.git", branch = "main", features = ["csr"] }
leptos_meta = {  git = "https://github.com/leptos-rs/leptos.git", branch = "main", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
codegen-units = 1
lto = true
