[workspace]
members = [
  "app",
  "gen",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
edition = "2021"
homepage = "https://viz.rs"
documentation = "https://github.com/viz-rs/viz.rs"
repository = "https://github.com/viz-rs/viz.rs"
license = "MIT"

[workspace.dependencies]
serde = "1.0"
serde_json = "1.0"

[profile.bench]
debug = true

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2
