[package]
name = "app"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true

[features]
en = []
zh-cn = []

[dependencies]
console_log = "1"
log = "0.4"
leptos = "0.5.0-rc1"
leptos_dom = "0.5.0-rc1"
leptos_router = { version = "0.5.0-rc1", features = ["csr"] }
leptos_meta = { version = "0.5.0-rc1", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
  "Clipboard",
  "CssStyleDeclaration",
  "DomRect",
  "DomRectReadOnly",
  "DomTokenList",
  "Element",
  "Event",
  "HtmlAnchorElement",
  "HtmlSelectElement",
  "Location",
  "MediaQueryList",
  "MediaQueryListEvent",
  "Navigator",
  "Storage",
  "Window",
  # "IntersectionObserver",
  # "IntersectionObserverEntry",
  # "IntersectionObserverInit",
] }
wasm-bindgen = "=0.2.86"
cfg-if = "1.0"
gloo-net = "0.4"
gloo-events = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
codegen-units = 1
lto = true
