[package]
name = "viz-rs-frontend"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git", branch = "master", features = ["csr"] }
yew-router =  { git = "https://github.com/yewstack/yew.git", branch = "master" }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
console_log = "0.2.0"
log = "0.4.17"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.60", features = ["InputEvent", "KeyboardEvent", "Location", "Storage", "MediaQueryList", "MediaQueryListEvent", "Window", "Element", "DomTokenList", "Event", "HtmlAnchorElement"] }
gloo-net = "0.2.4"
