[package]
name = "viz-rs-tools"
version.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1.0.65"
globset = "0.4.9"
pulldown-cmark = { version = "0.9.2", default-features = false }

# https://github.com/lapce/lapce/blob/master/lapce-core/Cargo.toml
tree-sitter = "0.20.9"
tree-sitter-highlight = "0.20.1"
tree-sitter-javascript = "0.20.0"
tree-sitter-rust = { git = "https://github.com/tree-sitter/tree-sitter-rust.git", branch = "master" }
tree-sitter-toml = "0.20.0"
tree-sitter-json = { git = "https://github.com/tree-sitter/tree-sitter-json.git", branch = "master" }
tree-sitter-md = { git = "https://github.com/MDeiml/tree-sitter-markdown.git", branch = "split_parser" }
walkdir = { version = "2.3.2" }
tree-sitter-loader = "0.20.0"
minify-html = "0.10.2"

[build-dependencies]
cc = "1.0"
