[package]
name = "viz-rs-tools"
version.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1.0.65"
globset = "0.4.9"
pulldown-cmark = { version = "0.9.2", default-features = false }

tree-sitter-c = "0.20.2"
# tree-sitter-html = { git = "https://github.com/tree-sitter/tree-sitter-html.git", branch = "master" }
tree-sitter-javascript = { git = "https://github.com/tree-sitter/tree-sitter-javascript.git", branch = "master" }
tree-sitter-json = { git = "https://github.com/tree-sitter/tree-sitter-json.git", branch = "master" }
tree-sitter-md = { git = "https://github.com/MDeiml/tree-sitter-markdown.git", branch = "split_parser" }
tree-sitter-rust = { git = "https://github.com/tree-sitter/tree-sitter-rust.git", branch = "master" }
tree-sitter-toml = "0.20.0"
tree-sitter-zig = { git = "https://github.com/maxxnino/tree-sitter-zig.git", branch = "main" }
walkdir = { version = "2.3.2" }
minify-html = "0.10.2"
highlighting = "0.1.2"

[build-dependencies]
cc = "1.0"
