[package]
name = "tools"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
version.workspace = true

[features]
default = ["en"]

en = []
zh-cn = []

[dependencies]
anyhow = "1.0.65"
globset = "0.4.9"
pulldown-cmark = { version = "0.9.2", default-features = false }

tree-sitter-c = "0.20.2"
# tree-sitter-html = { git = "https://github.com/tree-sitter/tree-sitter-html.git", branch = "master" }
tree-sitter-bash = { git = "https://github.com/syntacti/tree-sitter-bash.git", rev = "77cf8a7" }
tree-sitter-javascript = { git = "https://github.com/tree-sitter/tree-sitter-javascript.git", branch = "master" }
tree-sitter-json = { git = "https://github.com/tree-sitter/tree-sitter-json.git", branch = "master" }
tree-sitter-md = { git = "https://github.com/MDeiml/tree-sitter-markdown.git", branch = "split_parser" }
tree-sitter-rust = { git = "https://github.com/tree-sitter/tree-sitter-rust.git", rev = "0431a2c" }
tree-sitter-toml = "0.20.0"
tree-sitter-zig = { git = "https://github.com/maxxnino/tree-sitter-zig.git", branch = "main" }
walkdir = { version = "2.3.2" }
minify-html = "0.10.2"
highlighting = "0.1.2"
clap = { version = "4.0.14", features = ["derive"] }

[build-dependencies]
cc = "1.0"
